Navbar no longer overlaps on other pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
-    height: 100vh;
     margin: 0;
+    min-height: 100vh;
     background: radial-gradient(#9AD0EC,#1572A1);
     background-repeat: no-repeat;
     font-family: 'DM Serif Display'
