--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,51 +1,39 @@
-nav {
-    display: grid;
+.navbar-container {
+    display: flex;
     width: 100%;
-    grid-template-columns: .15fr 1fr;
-    position: fixed;
-    top: 0;
-}
-
-#navbar-container {
-    grid-column: 2;
-    color: white;
-    list-style-type: none;
-    display: flex;
-    justify-content: right;
+    min-height: 10vh;
+    justify-content: space-between;
     align-items: center;
-    position: relative;
-    padding-right: 2rem;
-    top: 0;
-}
-
-#logo-container {
-    grid-column: 1;
-    color: white;
-    list-style-type: none;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    position: relative;
-    top: 0;
-}
-
-.logo {
-    font-size: 2.5rem;
     font-weight: 550;
-    position: relative;
-    justify-content: left;
 }
 
-img.logo {
-    height: 3.6rem;
-    width: 3.6rem;
-}
-
-.navbar-element {
+.navbar-logo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
     text-decoration: none;
-    margin-right: 1.2rem;
-    font-size: 1.2rem;
-    font-weight: 550;
+    margin-left: 1rem;
+    font-size: 2.5rem;
+    z-index: 2;
+}
+
+.navbar-logo-img {
+    height: 3.4rem;
+    width: 3.4rem;
+}
+
+.navbar-menu {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+    margin-right: 2.2rem;
+}
+
+.navbar-links {
+    text-decoration: none;
+    margin-right: 2.2rem;
+    font-size: 1.25rem;
     text-transform: uppercase;
     cursor: pointer;
     background-image: linear-gradient(180deg, transparent 90%, white 0);
@@ -54,51 +42,93 @@ img.logo {
     transition: background-size .4s ease;
 }
 
+.navbar-links:hover {
+    background-size: 100% 100%;
+}
+
 a:visited { 
     color: white;
     text-decoration: none;
 }
 
-.navbar-element:hover {
-    background-size: 100% 100%;
-  }
+.menu-toggle {
+    display: none;
+}
 
 
-@media screen and (max-width: 720px){
+@media(max-width: 760px) {
 
-    #logo-container {
-        display: none;
+    .navbar-container {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        min-height: 10vh;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 550;
     }
-    
-    #navbar-container {
-        grid-column: 1 / span 2;
+
+    .navbar-menu  {
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        height: 100vh;
         width: 100%;
-        text-align: left;
-        padding: 0rem;
         position: absolute;
-        top: -1rem;
+        top: 0;
+        min-height: 100vh;
+        background: radial-gradient(#9AD0EC,#1572A1);
+        left: -100%;
+        transition: all 0.3s ease;
+        z-index: 1;
+    }
+
+
+    .navbar-menu.active {
         left: 0;
-        color: white;
-        background-color: #107dac;
-        transform: translateX(-100%);
-        transition: .3s ease-in-out;
+        transition: all 0.3s ease;
     }
 
-    #navbar-container.slide {
-        transform: translateX(0%);
-        transition: .3s ease-in-out;
-    }
-
-    .navbar-element {
+    .navbar-links {
+        margin: 0;
+        font-size: 3.5vmax;
         width: 100%;
-        border-top: .1rem solid #9AD0EC;
-        text-align: center;
-        margin-right: 2rem;
-        padding: 1rem 1rem;
+        background-image: none;
+        transition: none;
     }
-    
+
+    .navbar-links.one {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .navbar-links.two {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .navbar-links.three {
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .menu-toggle {
+        display: flex;
+        cursor: pointer;
+        margin-right: 1rem;
+        font-size: 3rem;
+        color: white;
+        z-index: 2;
+    }
+
 }
