--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,7 +1,7 @@
 #homepage-grid-container {
     display: grid;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     grid-template-columns: .5fr .5fr 1fr .5fr .5fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     place-items: center;
@@ -35,9 +35,10 @@
     margin: 5px 5px;
     transition: all ease-in-out 0.3s;
     cursor: pointer;
+    z-index: 0;
   }
 
   .homepage-button:hover {
       transform: translateY(-5px);
       filter: drop-shadow( 0px 3px 2px #107dac81);
-  }
+  } 
